# tory_davenport_website

./: pyproject.toml
tests/: test_tory_davenport_website.py
tory_davenport_website/: main.py  routes.py
tory_davenport_website.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tory_davenport_website/static/style/: style.css
tory_davenport_website/templates/: index.html  signin.html
