[tool.poetry]
name = "easy_config"
version = "0.1.0"
description = ""
authors = ["Tory Davenport <contact@torydavenport.com>"]

[tool.poetry.dependencies]
python = "^3.8"
meraki = "^1.4.3"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
